--- a/fonts/main.css
+++ b/fonts/main.css
@@ -1,1 +1,14 @@
-/*! Source Sans Pro */@font-face{font-family:'Source Sans Pro';font-style:normal;font-weight:400;font-display:swap;src:url(Source_Sans_Pro/SourceSansPro-Regular.ttf) format('truetype')}@font-face{font-family:'Source Sans Pro';font-style:normal;font-weight:600;font-display:swap;src:url(Source_Sans_Pro/SourceSansPro-SemiBold.ttf) format('truetype')}@font-face{font-family:'Source Sans Pro';font-style:normal;font-weight:700;font-display:swap;src:url(Source_Sans_Pro/SourceSansPro-Bold.ttf) format('truetype')}@font-face{font-family:'Source Sans Pro';font-style:normal;font-weight:900;font-display:swap;src:url(Source_Sans_Pro/SourceSansPro-Black.ttf) format('truetype')}/*! Lato */@font-face{font-family:Lato;font-style:normal;font-weight:400;font-display:swap;src:url(Lato/Lato-Regular.ttf) format('truetype')}
+/*! Source Sans Pro */
+@font-face{font-family:'Source Sans Pro';font-style:normal;font-weight:400;font-display:swap;src:url(Source_Sans_Pro/SourceSansPro-Regular.ttf) format('truetype')}
+@font-face{font-family:'Source Sans Pro';font-style:normal;font-weight:600;font-display:swap;src:url(Source_Sans_Pro/SourceSansPro-SemiBold.ttf) format('truetype')}
+@font-face{font-family:'Source Sans Pro';font-style:normal;font-weight:700;font-display:swap;src:url(Source_Sans_Pro/SourceSansPro-Bold.ttf) format('truetype')}
+@font-face{font-family:'Source Sans Pro';font-style:normal;font-weight:900;font-display:swap;src:url(Source_Sans_Pro/SourceSansPro-Black.ttf) format('truetype')}
+
+/*! Lato */
+@font-face{font-family:Lato;font-style:normal;font-weight:400;font-display:swap;src:url(Lato/Lato-Regular.ttf) format('truetype')}
+
+/*! Hitmarker */ 
+@font-face{font-family:'Hitmarker Text';font-style:normal;font-weight:400;font-display:swap;src:url(Hitmarker/Text/HitmarkerText-Regular.woff2) format('woff2')}
+@font-face{font-family:'Hitmarker Text';font-style:normal;font-weight:700;font-display:swap;src:url(Hitmarker/Text/HitmarkerText-Bold.woff2) format('woff2')}
+@font-face{font-family:'Hitmarker Condensed';font-style:normal;font-weight:400;font-display:swap;src:url(Hitmarker/Display/HitmarkerCondensed-Regular.woff2) format('woff2')}
+@font-face{font-family:'Hitmarker Condensed';font-style:normal;font-weight:900;font-display:swap;src:url(Hitmarker/Display/HitmarkerCondensed-Black.woff2) format('woff2')}
